--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -3,8 +3,24 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-image: url('http://i.imgur.com/308aYz2.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size:cover;
+  background-attachment: fixed;
   color: white !important;
+}
+
+#map {
+  height: 450px;
+  width: 100%;
+  margin-bottom: 10%;
+  border-radius: 50%;
+
+}
+
+#city-input {
+    width: 100%;
+    height: 40px;
+    margin-top: 5%;
+    margin-left: 20%;
 }
 
 a {
@@ -12,26 +28,62 @@ a {
 }
 
 header {
-  border: 2px solid purple;
+  background-color: rgba(17, 17, 17, 0.71);
+  height: 100px;
+  width: 100%;
+  padding: 5%;
 }
 
 footer {
-  border: 2px solid orange;
+
   margin-top: 5%;
+  height: 100px;
+  background-color: rgba(17, 17, 17, 0.71);
 }
 
-.four.columns.main-content {
+#city-submit {
+  margin-left: 45%;
+}
 
-  border: 2px solid red;
+#pinmap {
+  width: 100%;
+  height: 100%;
+  margin-left: 20%;
+
+}
+.row.search {
+  margin-top: 5%;
+  background-color: rgba(17, 17, 17, 0.71);
+}
+.six.columns.main-content {
+    text-align: center;
+    background-color: rgba(17, 17, 17, 0.71);
+    padding: 5%;
 }
 
 .four.columns {
   margin-top: 5%;
-  border: 2px solid blue;
+
+}
+
+.one.columns {
+  margin-top: 2%;
+
+}
+.two.columns {
+  margin-top: 2%;
+
+}
+
+.three.columns {
+  margin-top: 5%;
+
 }
 
 .four.columns.search {
-  border: 2px solid blue;
+
+  padding: 2%;
+
 }
 
 .row.content {
