--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
   <script type="text/javascript" src="/javascripts/app.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj9Fo9kRojTI2t6idLbLV7KE7FMEta0m4"></script>
   <script type="text/javascript" src="/javascripts/gmaps.js"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" type="text/css">
+  <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.10/jquery-ui.min.js"></script>
 </head>
 
 <body>
