--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,3 +1,17 @@
+header {
+  padding: 0 !important;
+  font-family: Arapey;
+  color: rgb(33, 166, 117);
+}
+header h1 {
+  float: right;
+  margin-right: 5%;
+  margin-top: 1.5%;
+}
+header p{
+  color: rgb(33, 166, 117);
+  font-family: Pathway Gothic One;
+}
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -20,7 +34,7 @@ body {
     width: 100%;
     height: 40px;
     margin-top: 5%;
-    margin-left: 20%;
+    // margin-left: 20%;
 }
 
 a {
@@ -42,20 +56,19 @@ footer {
 }
 
 #city-submit {
-  margin-left: 45%;
+  margin-left: 25%;
 }
 
 #pinmap {
   width: 100%;
   height: 100%;
-  margin-left: 20%;
 
 }
 .row.search {
   margin-top: 5%;
   background-color: rgba(17, 17, 17, 0.71);
 }
-.six.columns.main-content {
+.eight.columns.main-content {
     text-align: center;
     background-color: rgba(17, 17, 17, 0.71);
     padding: 5%;
@@ -93,3 +106,8 @@ footer {
 .row.search {
 
 }
+// @media (min-width: 550px) {
+// #city-submit {
+//   margin-left: 35% !important;
+//   }
+// }
