--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,17 +13,18 @@
   <script type="text/javascript" src="/javascripts/gmaps.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" type="text/css">
   <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.10/jquery-ui.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Pacifico|Arapey' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <header>
+    <div class="row">
+      <div class="twelve columns">
     <h1>
-      <%= title %>
+      | song | city |
     </h1>
-    <p>Welcome to
-      <%= title %>
-    </p>
-
+    </div>
+  </div>
   </header>
 
 
@@ -39,6 +40,7 @@
         <div class="two columns">
 
         </div>
+
         <div class="eight columns">
           <img id="pinmap" src="/images/pinmap2.png" alt="" />
           <input class="u-full-width" type="text" name="city" value="" id="city-input" placeholder="Enter City">
@@ -57,20 +59,33 @@
   </div>
 
   <div class="row content">
-    <div class="three columns">
+    <div class="two columns">
 
     </div>
 
-    <div class="six columns main-content">
+    <div class="eight columns main-content">
       <div id="map">
 
       </div>
-      <ul>
 
-      </ul>
+      <div class='row content'>
+        <div class="three columns img-content">
+          <ul>
+
+          </ul>
+        </div>
+        <div class="three columns text-content">
+          <ul>
+
+          </ul>
+        </div>
+      </div>
+      <!-- <br> -->
+
+
     </div>
 
-    <div class="three columns">
+    <div class="two columns">
 
     </div>
   </div>
