datetime and styling

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -24,14 +24,14 @@ body {
 
 #map {
   height: 450px;
-  width: 100%;
+  width: 80%;
   margin-bottom: 10%;
   border-radius: 50%;
 
 }
 
 #city-input {
-    width: 100%;
+    width: 100px;
     height: 40px;
     margin-top: 5%;
     // margin-left: 20%;
@@ -56,7 +56,7 @@ footer {
 }
 
 #city-submit {
-  margin-left: 25%;
+
 }
 
 #pinmap {
@@ -106,7 +106,13 @@ footer {
 .row.search {
 
 }
-// @media (min-width: 550px) {
+.artist-image {
+  border-radius: 50%;
+}
+.three.columns ul {
+  list-style-type: none;
+}
+// @media (min-width: 1045px) {
 // #city-submit {
 //   margin-left: 35% !important;
 //   }
