--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,6 @@
     </div>
   </div>
 
-  <div class="row content">
     <div class="two columns">
 
     </div>
@@ -74,25 +73,16 @@
 
           </ul>
         </div>
-        <div class="three columns text-content">
-          <ul>
-
-          </ul>
-        </div>
       </div>
+
       <!-- <br> -->
 
 
     </div>
+    <!-- <div class="two columns">
 
-    <div class="two columns">
+    </div> -->
 
-    </div>
-  </div>
-
-  <footer>
-    &copy;2015
-  </footer>
 
 </body>
 
