--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2,6 +2,10 @@ header {
   padding: 0 !important;
   font-family: Arapey;
   color: rgb(33, 166, 117);
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  padding: 0px !important;
 }
 header h1 {
   float: right;
@@ -12,19 +16,25 @@ header p{
   color: rgb(33, 166, 117);
   font-family: Pathway Gothic One;
 }
+
+ul {
+  list-style-type: none !important;
+}
+
 body {
-  padding: 50px;
+
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-image: url('http://i.imgur.com/308aYz2.jpg');
   background-repeat: no-repeat;
   background-size:cover;
   background-attachment: fixed;
   color: white !important;
+  margin: 0 !important;
 }
 
 #map {
-  height: 450px;
-  width: 80%;
+  height: 300px;
+  width: 300px;
   margin-bottom: 10%;
   border-radius: 50%;
 
@@ -108,10 +118,9 @@ footer {
 }
 .artist-image {
   border-radius: 50%;
+  margin-top: 10%;
 }
-.three.columns ul {
-  list-style-type: none;
-}
+
 // @media (min-width: 1045px) {
 // #city-submit {
 //   margin-left: 35% !important;
