--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,11 @@
   <header>
     <div class="row">
       <div class="twelve columns">
-    <h1>
-      | song | city |
-    </h1>
+        <h1>
+          | song | city |
+        </h1>
+      </div>
     </div>
-  </div>
   </header>
 
 
@@ -58,30 +58,47 @@
     </div>
   </div>
 
+
+  <div class="row">
+
     <div class="two columns">
 
     </div>
-
     <div class="eight columns main-content">
-      <div id="map">
+      <div class="row">
+        <div class="three columns">
 
+        </div>
+        <div class="five columns" id="map">
+
+        </div>
+        <div class="three columns">
+
+        </div>
       </div>
 
       <div class='row content'>
-        <div class="three columns img-content">
+        <div class="four columns">
+
+        </div>
+        <div class="four columns img-content">
+
           <ul>
 
           </ul>
         </div>
+        <div class="four columns">
+
+        </div>
       </div>
 
       <!-- <br> -->
+      <div class="two columns">
 
-
+        </div>
     </div>
-    <!-- <div class="two columns">
+  </div>
 
-    </div> -->
 
 
 </body>
