--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -6,6 +6,9 @@ header {
   left: 0 !important;
   width: 100% !important;
   padding: 0px !important;
+  position: fixed;
+  z-index: 500;
+
 }
 header h1 {
   float: right;
@@ -19,11 +22,12 @@ header p{
 
 ul {
   list-style-type: none !important;
+  color: rgb(33, 166, 117);
 }
 
 body {
 
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Open Sans", Helvetica, Arial, sans-serif;
   background-image: url('http://i.imgur.com/308aYz2.jpg');
   background-repeat: no-repeat;
   background-size:cover;
@@ -35,9 +39,9 @@ body {
 #map {
   height: 300px;
   width: 300px;
-  margin-bottom: 10%;
+  // margin-bottom: 10%;
   border-radius: 50%;
-
+  margin-left: 7%;
 }
 
 #city-input {
@@ -75,8 +79,9 @@ footer {
 
 }
 .row.search {
-  margin-top: 5%;
-  background-color: rgba(17, 17, 17, 0.71);
+  margin-top: 10%;
+  // background-color: rgba(17, 17, 17, 0.71);
+
 }
 .eight.columns.main-content {
     text-align: center;
