--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
         <div class="five columns" id="map">
 
         </div>
-        <div class="three columns">
+        <div class="four columns">
 
         </div>
       </div>
