--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -23,6 +23,8 @@ header p{
 ul {
   list-style-type: none !important;
   color: rgb(33, 166, 117);
+  font-family: "PT Sans Narrow";
+  font-size: 1.4em;
 }
 
 body {
@@ -125,9 +127,3 @@ footer {
   border-radius: 50%;
   margin-top: 10%;
 }
-
-// @media (min-width: 1045px) {
-// #city-submit {
-//   margin-left: 35% !important;
-//   }
-// }
